--- a/src/components/ui/general/mobile-menu/mobile-menu.module.scss
+++ b/src/components/ui/general/mobile-menu/mobile-menu.module.scss
@@ -6,7 +6,7 @@
   right: 0;
   bottom: 0;
   display: none;
-  padding: 1.5rem 0 3rem;
+  padding: 1.75rem 0 3rem;
   background-color: white;
   overflow: scroll;
   &__shown {
@@ -20,12 +20,11 @@
 }
 
 .link {
-  font-family: 'Arial', sans-serif;
+  font-weight: 500;
   color: $primary;
   font-size: 24px;
   margin: 0 1.5rem;
   padding-bottom: $p-xxl;
-  border-bottom: 2px solid transparent;
   transition: all 0.3s ease-in-out;
   &:hover {
     color: $primary;
@@ -43,9 +42,4 @@
   margin-top: 2rem;
   margin-bottom: 2rem;
 }
-.button-root {
-  background-color: #464073 !important;
-}
-.semicircles {
-  margin-top: 90px;
-}
+
