--- a/src/components/ui/general/navbar/navbar.module.scss
+++ b/src/components/ui/general/navbar/navbar.module.scss
@@ -2,9 +2,8 @@
 @import 'src/styles/mixins';
 .navbar {
   background-color: transparent;
-  padding: 1.5rem 0;
+  padding: 1.75rem 0;
   transition: all 0.1s ease-in-out;
-  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.05);
 }
 .nav {
   display: none;
@@ -13,16 +12,33 @@
   }
 }
 .nav-link {
-  font-family: 'Arial', sans-serif;
-  font-size: 16px;
+  position: relative;
+  font-size: 1rem;
+  line-height: 1.25rem;
   color: $primary;
+  font-weight: 500;
   margin: 0 1.5rem;
-  padding: 0.25rem 0;
   border-bottom: 2px solid transparent;
   transition: all 0.3s ease-in-out;
+  &::after {
+    content: '';
+    position: absolute;
+    display: block;
+    bottom: -15px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
+    background-color: transparent;
+    z-index: 1000 !important;
+    transition: all 0.3s ease-in-out;
+  }
   &:hover {
-    border-bottom: 2px solid $primary;
-    color: $primary;
+    color: $coloredtext;
+    &::after {
+      background-color: $coloredtext;
+    }
   }
 }
 .open-icon {
