--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,6 +5,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
+  font-family: 'Red Hat Display' !important;
+  font-weight: normal;
+  font-size: 18px;
 }
 
 li {
