--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -8,6 +8,7 @@ body {
   font-family: 'Red Hat Display' !important;
   font-weight: normal;
   font-size: 18px;
+  // background: rgba(255, 241, 244, 1);
 }
 
 li {
@@ -22,6 +23,38 @@ a {
   &:focus,
   &:active {
     color: inherit;
+  }
+}
+
+h1 {
+  font-size: 24px !important;
+  line-height: 33px !important;
+  font-weight: 700;
+  color: $primary;
+  margin-bottom: 24px;
+  @include breakpoint('mobile') {
+    font-size: 48px !important;
+    line-height: 66px !important;
+  }
+}
+
+h3 {
+  font-size: 18px !important;
+  line-height: 24px;
+  @include breakpoint('mobile') {
+    font-size: 26px !important;
+    line-height: 33px !important;
+  }
+}
+
+p {
+  font-size: 16px !important;
+  line-height: 28px !important;
+  color: $primary;
+  margin-bottom: 32px;
+  @include breakpoint('mobile') {
+    font-size: 20px !important;
+    line-height: 42px !important;
   }
 }
 
