--- a/src/styles/bootstrap-reset.scss
+++ b/src/styles/bootstrap-reset.scss
@@ -6,6 +6,9 @@
   @media (min-width: 1200px) {
     max-width: 1200px;
   }
+  @media (min-width: 1920px) {
+    max-width: 1440px;
+  }
 }
 .dropdown-toggle {
   &:after {
