--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -7,6 +7,7 @@ $breakpoints: (
   'mobile': 767px,
   'tablet': 992px,
   'desktop': 1200px,
+  'desktop-large': 1920px,
 ) !default;
 
 $p-xs: 4px;
