--- a/src/components/sections/hero-section/hero-section.module.scss
+++ b/src/components/sections/hero-section/hero-section.module.scss
@@ -1,6 +1,10 @@
 @import 'src/styles/variables';
 @import 'src/styles/mixins';
 
+.hero-bg {
+  height: 100%;
+  background: linear-gradient(0deg, rgba(255, 255, 255, 0) 0%, #FFF8F8 100%, #B57474 100%);
+}
 .fluid-container {
   padding-top: 7rem;
   padding-bottom: 3rem;
