--- a/src/components/ui/general/navbar/navbar.module.scss
+++ b/src/components/ui/general/navbar/navbar.module.scss
@@ -4,6 +4,9 @@
   background-color: transparent;
   padding: 1.25rem 0;
   transition: all 0.1s ease-in-out;
+  &__onLight {
+    background-color: #fff;
+  }
   @include breakpoint('mobile') {
     padding: 1.75rem 0;
   }
