--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -40,6 +40,21 @@ h1 {
     line-height: 73px !important;
   }
 }
+h2 {
+  font-size: 24px !important;
+  line-height: 33px !important;
+  font-weight: 700;
+  color: $primary;
+  margin-bottom: 24px;
+  @include breakpoint('mobile') {
+    font-size: 44px !important;
+    line-height: 54px !important;
+  }
+  @include breakpoint('desktop-large') {
+    font-size: 50px !important;
+    line-height: 60px !important;
+  }
+}
 
 h3 {
   font-size: 18px !important;
