feature: add contagion section

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -29,7 +29,7 @@ h1 {
   font-size: 24px !important;
   line-height: 33px !important;
   font-weight: 700;
-  color: $primary;
+  color: $greentext;
   margin-bottom: 24px;
   @include breakpoint('mobile') {
     font-size: 44px !important;
@@ -44,7 +44,7 @@ h2 {
   font-size: 24px !important;
   line-height: 33px !important;
   font-weight: 700;
-  color: $primary;
+  color: $greentext;
   margin-bottom: 24px;
   @include breakpoint('mobile') {
     font-size: 44px !important;
