--- a/src/components/ui/general/info-item/info-item.module.scss
+++ b/src/components/ui/general/info-item/info-item.module.scss
@@ -1,2 +1,49 @@
 @import 'src/styles/variables';
 @import 'src/styles/mixins';
+
+.image-styles {
+    max-width: 555px;
+    margin-left: auto;
+}
+
+.number-wrapper {
+    display: none;
+    @include breakpoint('mobile') {
+        display: block;
+        margin-right: 20px;
+    }
+    @include breakpoint('desktop') {
+        margin-right: 40px;
+    }
+}
+
+.content-wrapper {
+    display: flex;
+    @include breakpoint('tablet') {
+        padding-top: 70px;
+    }
+    @include breakpoint('desktop-large') {
+        padding-top: 170px;
+    }
+    .number-image {
+        width: 75px;
+    }
+}
+
+
+.info-title {
+    text-transform: capitalize;
+    color: $greentext;
+    font-weight: 700;
+    font-size: 24px !important;
+    line-height: 39px !important;
+    @include breakpoint('desktop-large'){
+        font-size: 47px !important;
+        line-height: 69px !important;
+    }
+}
+.info-text {
+    text-transform: capitalize;
+    font-size: 18px !important;
+    line-height: 40px !important;
+}
