--- a/src/components/sections/footer/footer.module.scss
+++ b/src/components/sections/footer/footer.module.scss
@@ -5,6 +5,7 @@
     padding-right: 0 !important;
     padding-left: 0 !important;
     position: relative;
+    background: linear-gradient(360deg, rgba(255, 241, 241, 0.5) 0%, rgba(255, 241, 241, 0) 108.69%);
 }
 
 .footer-social {
