--- a/src/components/ui/country/component.module.scss
+++ b/src/components/ui/country/component.module.scss
@@ -3,6 +3,7 @@
 
 .component-wrapper {
     display: flex;
+    justify-content: space-between;
     max-height: 35px;
     margin-bottom: 20px;
     align-items: center;
