--- a/src/components/sections/map-section/map.module.scss
+++ b/src/components/sections/map-section/map.module.scss
@@ -3,6 +3,9 @@
 
 .map-container {
     position: relative !important;
+    @include breakpoint('tablet') {
+        padding-top: 100px;
+    }
 }
 
 .wrapper-data {
@@ -14,7 +17,7 @@
     @include breakpoint('tablet') {
         position: absolute;
         right: 0;
-        top: 0;
+        top: 100px;
         min-width: 404px;
     }
     @include breakpoint('desktop-large') {
@@ -86,15 +89,16 @@
     }
     @include breakpoint('tablet') {
         position: absolute;
+        top: 100px;
         right: 440px;
+    }
+    @include breakpoint('desktop-large') {
+        right: 540px;
         width: 76px;
         height: 76px;
         .search {
             font-size: 35px;
         }
-    }
-    @include breakpoint('desktop-large') {
-        right: 540px;
     }
 }
 
@@ -103,11 +107,25 @@
     @include breakpoint('tablet') {
         position: absolute;
         right: 440px;
-        top: 0;
+        top: 100px;
     }
     @include breakpoint('desktop-large') {
-        position: absolute;
         right: 540px;
-        top: 0;
+    }
+}
+
+.map-bg {
+    margin: 20px 0;
+    @include breakpoint('tablet') {
+        max-width: 500px;
+        margin: 0;
+    }
+    @include breakpoint('desktop') {
+        max-width: 700px;
+        margin: 0;
+    }
+    @include breakpoint('desktop-large') {
+        max-width: 880px;
+        margin-top: 50px;
     }
 }
