--- a/src/components/sections/footer/footer.module.scss
+++ b/src/components/sections/footer/footer.module.scss
@@ -4,6 +4,7 @@
 .fluid-container {
     padding-right: 0 !important;
     padding-left: 0 !important;
+    padding-bottom: 15px;
     position: relative;
     background: linear-gradient(360deg, rgba(255, 241, 241, 0.5) 0%, rgba(255, 241, 241, 0) 108.69%);
 }
